# PuntoEntrega

./: .env.build  .env.development.example  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.yaml  plan.md  steps.md
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_multitenant_core_models.py  0002_fix_auth_user_table_name.py  0003_organizations_owner_and_drop_user_role.py  0004_create_organization_invitations.py  0005_create_product_requests.py  0006_memberships_location_scoping_cutover.py  0007_product_request_items_and_optional_message.py  0008_create_notification_outbox_events.py  0009_drop_delivery_email_status.py  0010_drop_product_request_email_tracking.py
backend/app/: __init__.py  api.py
backend/core/: config.py  db.py  errors.py  frontend_urls.py  logging.py
backend/features/: models_registry.py
backend/features/auth/: email.py  emails.py  models.py  notifications.py  schemas.py  service.py  wiring.py
backend/features/deliveries/: __init__.py  email.py  emails.py  models.py  notifications.py  schemas.py  service.py  wiring.py
backend/features/invitations/: __init__.py  email.py  emails.py  models.py  notifications.py  schemas.py  service.py  wiring.py
backend/tests/: conftest.py  test_deliveries.py  test_deliveries_email.py  test_invitations.py  test_locations.py  test_organizations_onboarding.py  test_owner_member_authorization.py  test_product_requests.py  test_products.py  test_users.py
backend/worker/: main.py
(+132 files in other folders)
