[project]
name = "punto-entrega-backend"
version = "0.1.0"
description = "FastAPI backend for PuntoEntrega"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg",
    "fastapi",
    "fastapi-users[sqlalchemy]",
    "pydantic-settings",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "aiosqlite",
    "httpx",
    "pytest",
    "pytest-asyncio",
]
